--- a/index.html
+++ b/index.html
@@ -7,26 +7,33 @@
     <script src="./mega_sena.js" defer></script>
 </head>
 <body>
-    <main>
-        <h1>MEGA SENA</h1>
-        <h2>Sua sorte está lançada gere aqui seu(s) jogo(s):</h2>
-        <div>
-            <label for="qtdNumAleatorio">
-                Informe a quantidade de números?
-            </label>
-            <input type="number" id="qtdNumAleatorio" value="6" >
-        </div>
-        <div>
-            <label for="qtdNumJogo">
-                Informe a quantidade de jogos?
-            </label>
-            <input type="number" id="qtdNumJogo" value="1">
-        </div>
-        <button id="botao">Gerar</button>
-        <div id="resultado">
-            
-        </div>
+    <div id="conteudo">
+        <header>
+            <h1>MEGA SENA</h1>
+            <h2>Sua sorte está lançada gere aqui seu(s) jogo(s):</h2>
+        </header>
+        <main>
+            <div>
+                <label for="qtdNumAleatorio">
+                    Informe a quantidade de números?
+                </label>
+                <input type="number" id="qtdNumAleatorio" value="6" >
+            </div>
+            <div>
+                <label for="qtdNumJogo">
+                    Informe a quantidade de jogos?
+                </label>
+                <input type="number" id="qtdNumJogo" value="1">
+            </div>
+            <button id="botao">Gerar</button>
+            <div id="resultado">
+                
+            </div>
+        </main>
+        <footer>
+            Todos direitos reservados @marianaoliveira
+        </footer>
 
-    </main>
+    </div>
 </body>
 </html>
